@@ -129,6 +129,7 @@ DC_ITEM;
 typedef struct
 {
 	zbx_uint64_t	functionid;
+	zbx_uint64_t	triggerid;
 	zbx_uint64_t	itemid;
 	char		*function;
 	char		*parameter;
@@ -208,7 +209,8 @@ void	DCload_config();
 int	DCget_host_by_hostid(DC_HOST *host, zbx_uint64_t hostid);
 int	DCconfig_get_item_by_key(DC_ITEM *item, zbx_uint64_t proxy_hostid, const char *host, const char *key);
 void	DCconfig_get_items_by_itemids(DC_ITEM *items, zbx_uint64_t *itemids, int *errcodes, size_t num);
-int	DCconfig_get_function_by_functionid(DC_FUNCTION *function, zbx_uint64_t functionid);
+void	DCconfig_get_functions_by_functionids(DC_FUNCTION *functions, zbx_uint64_t *functionids, int *errcodes, size_t num);
+void	DCconfig_clean_functions(DC_FUNCTION *functions, int *errcodes, size_t num);
 void	DCconfig_get_triggers_by_itemids(zbx_hashset_t *trigger_info, zbx_vector_ptr_t *trigger_order,
 		const zbx_uint64_t *itemids, const zbx_timespec_t *timespecs, char **errors, int item_num);
 int	DCconfig_get_trigger_for_event(DB_TRIGGER *trigger, zbx_uint64_t triggerid);
